# FENT

./: .gitignore  Anchor.toml  README.md  next.config.ts  package-lock.json  package.json  patch.sh  tsconfig.anchor.json  tsconfig.json
app/: globals.css  layout.tsx  loading.tsx
app/(app)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
components/: appShell.tsx
components/auctions/: auctionHero.tsx  auctionMechanics.tsx  bidForm.tsx  myAuctionOrders.tsx  orderBook.tsx  pastAuctions.tsx  tradeHistory.tsx
components/dashboard/: ActionRail.tsx  AuctionPanel.tsx  LSTAllocation.tsx  PortfolioSummary.tsx  PositionMatrix.tsx  ProtocolNotes.tsx  YTSensitivity.tsx  dashboardHeader.tsx  panel.tsx
components/history/: historySummary.tsx
components/landing/: landing.tsx
components/marketing/: dashboardSnippet.tsx  fentSphere3D.tsx  flowSection.tsx  marketingNav.tsx
components/navbar/: navbar.tsx
components/positions/: activityLog.tsx  positionSummary.tsx  positionsTable.tsx  quickActions.tsx
components/redeem/: redeemCard.tsx  redeemHistory.tsx  redeemNote.tsx
components/wallet/: network-bridge.tsx  wallet-connect-button.tsx  wallet-provider.tsx
lib/: data.ts  nav.ts  utils.ts
programs/fent/: Cargo.toml
programs/fent/src/: lib.rs
programs/fent/src/errors/: mod.rs
programs/fent/src/events/: mod.rs
programs/fent/src/instructions/: admin.rs  auction.rs  deposit.rs  market.rs  mod.rs  redeem.rs  split.rs
programs/fent/src/state/: mod.rs
programs/fent/tests/: test_initialize.rs
styles/: marketing.css
tests/: fent.ts  ryvex-anchor.ts
(+51 files in other folders)
