[package]
name = "fent"
version = "0.1.0"
description = "Solana yield tokenization protocol — PT/YT splitting and auction"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []


[dependencies]
anchor-lang  = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.31.1", features = ["token", "associated_token"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }


